WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260929
REGRESSION(
266896@main
): html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=260929
Summary
REGRESSION(266896@main): html/semantics/embedded-content/media-elements/locat...
Ben Schwartz
Reported
2023-08-30 15:47:44 PDT
imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html This test is a flaky text failure on all platforms. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fembedded-content%2Fmedia-elements%2Flocation-of-the-media-resource%2FcurrentSrc.html
TEXT DIFF: PASS video.currentSrc initial value PASS video.currentSrc after setting src attribute "" PASS video.currentSrc after adding source element with src attribute "" -PASS video.currentSrc after setting src attribute "." -PASS video.currentSrc after adding source element with src attribute "." +FAIL video.currentSrc after setting src attribute "." assert_equals: expected "
http://localhost:8800/html/semantics/embedded-content/media-elements/location-of-the-media-resource/
" but got "" +FAIL video.currentSrc after adding source element with src attribute "." assert_equals: expected "
http://localhost:8800/html/semantics/embedded-content/media-elements/location-of-the-media-resource/
" but got "" FAIL video.currentSrc after setting src attribute " " assert_equals: expected "
http://localhost:8800/html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html
" but got "" FAIL video.currentSrc after adding source element with src attribute " " assert_equals: expected "
http://localhost:8800/html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html
" but got "" -PASS video.currentSrc after setting src attribute "data:," +FAIL video.currentSrc after setting src attribute "data:," assert_equals: expected "data:," but got "" FAIL video.currentSrc after adding source element with src attribute "data:," assert_equals: expected "data:," but got "" DIFF URL:
https://build.webkit.org/results/Apple-Ventura-Release-AppleSilicon-WK2-Tests/267458%40main%20(4705)/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc-pretty-diff.html
REPRODUCIBILITY: I was able to reproduce this bug on macOS Ventura (13.5, 22G74/arm64) using the following command: run-webkit-tests --clobber-old-results --verbose imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html --iterations 100 --child-processes 10 -f
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Schwartz
Comment 1
2023-08-30 15:48:50 PDT
REGRESSION: I was able to bisect a regression point at
266896@main
. The issue did not reproduce at
266895@main
. The failure seems related to, and likely caused by, the changes at
266896@main
.
Radar WebKit Bug Importer
Comment 2
2023-08-30 15:49:31 PDT
<
rdar://problem/114728332
>
EWS
Comment 3
2023-08-30 16:38:33 PDT
Test gardening commit
267473@main
(d03047546def): <
https://commits.webkit.org/267473@main
> Reviewed commits have been landed. Closing PR #17259 and removing active labels.
Ryosuke Niwa
Comment 4
2023-09-01 15:30:34 PDT
FWIW, I can't reproduce this flakiness but I think I know what's going on so post a speculative fix.
Ryosuke Niwa
Comment 5
2023-09-01 15:34:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17360
EWS
Comment 6
2023-09-01 17:30:08 PDT
Committed
267570@main
(636ff0602d4c): <
https://commits.webkit.org/267570@main
> Reviewed commits have been landed. Closing PR #17360 and removing active labels.
Ryosuke Niwa
Comment 7
2023-09-01 20:48:45 PDT
The test is still flaky.
Ryosuke Niwa
Comment 8
2023-09-01 23:42:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17373
Ryosuke Niwa
Comment 9
2023-09-02 15:18:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17378
EWS
Comment 10
2023-09-02 16:59:04 PDT
Committed
267591@main
(68e39d424793): <
https://commits.webkit.org/267591@main
> Reviewed commits have been landed. Closing PR #17378 and removing active labels.
Ryosuke Niwa
Comment 11
2023-09-03 13:37:26 PDT
Looks like this issue is indeed fixed now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug