REGRESSION(266896@main): html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html is flaky https://bugs.webkit.org/show_bug.cgi?id=260929

Reviewed by NOBODY (OOPS!).

The flakiness was caused by a 0s timer (e.g. setTimeout) executing before an EventLoop task (e.g. media playback)
when the proceeding EventLoop::run has ran out of time (i.e. reached deadline). Because WindowEventLoop's
scheduleToRunIfNeeded uses a new 0s timer to schedule itself again, any other 0s timer that had already been
scheduled at that point will execute before the remaining tasks have a chance to complete.

This PR updates EventLoopTimer::fired to execute any remaining tasks deferred in the previous call to EventLoop::run
via EventLoop::runAllTasksScheduledPriorToTimer before executing the timer's task to avoid this ordering problem.
We don't set a deadline for this run of event loop as deferring those tasks until a later time is not an option
in this scenario (as deferring timer's task would violate its ordering with respect to other timers).

* LayoutTests/TestExpectations:
* Source/WebCore/dom/EventLoop.cpp:
(WebCore::EventLoopTimer::fired):
(WebCore::EventLoopTaskGroup::executeScheduledTask):
* Source/WebCore/dom/EventLoop.h:
(WebCore::EventLoop::runAllTasksScheduledPriorToTimer): Added.